# architects-connect-ghcp

./: Makefile  README.md  pyproject.toml  requirements.txt  test_aoai_connection.py
.github/agents/: xmas-ascii-artist.agent.md
.github/prompts/: init.prompt.md  xmas.prompt.md
examples/: autoplay.py
scripts/: package.sh
src/greetings/: __init__.py  ai_provider.py  cli.py  local_templates.py  providers.py  utils.py
tests/: test_cli.py
